Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16873

LU-16655 fix doesn't update OI_Scrub with new magic

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0, Lustre 2.15.4
    • Lustre 2.15.3
    • None
    • 3
    • 9223372036854775807

      The fix for LU-16655 detects the format change correctly but does not write new oi scrub file magic , so new mount triggers the "oi files counter reset" again and again:

      [root@devvm4 tests]# LCTL=/home/zam/work/git/lustre-wc-rel/lustre/utils/lctl
      [root@devvm4 tests]# umount /mnt/lustre-mds1/
      [root@devvm4 tests]# mount -t ldiskfs /dev/mapper/mds1_flakey /mnt/lustre-mds1/
      [root@devvm4 tests]# dd if=$HOME/OI_scrub.v1 of=/mnt/lustre-mds1/OI_scrub seek=16 skip=16 bs=1 conv=notrunc
      384+0 records in
      384+0 records out
      384 bytes copied, 0.00154305 s, 249 kB/s
      [root@devvm4 tests]# echo -n -e '\x01\x00' | dd of=/mnt/lustre-mds1/OI_scrub bs=1 count=2 status=none seek=136 conv=notrunc 
      [root@devvm4 tests]# umount /mnt/lustre-mds1/
      [root@devvm4 tests]# mount -t lustre /dev/mapper/mds1_flakey /mnt/lustre-mds1/
      [root@devvm4 tests]# $LCTL get_param *.*.oi_scrub | grep oi_files
      oi_files: 64
      oi_files: 64
      oi_files: 64
      [root@devvm4 tests]# 
      [root@devvm4 tests]# dmesg  | grep LU-16655
      [ 3325.250365] Lustre: 62237:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [root@devvm4 tests]# umount /mnt/lustre-mds1/
      [root@devvm4 tests]# mount -t lustre /dev/mapper/mds1_flakey /mnt/lustre-mds1/
      [root@devvm4 tests]# dmesg  | grep LU-16655
      [ 3325.250365] Lustre: 62237:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3344.469841] Lustre: 62344:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [root@devvm4 tests]# umount /mnt/lustre-mds1/
      [root@devvm4 tests]# mount -t lustre /dev/mapper/mds1_flakey /mnt/lustre-mds1/
      [root@devvm4 tests]# dmesg  | grep LU-16655
      [ 3325.250365] Lustre: 62237:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3344.469841] Lustre: 62344:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [root@devvm4 tests]# umount /mnt/lustre-mds1/
      [root@devvm4 tests]# mount -t lustre /dev/mapper/mds1_flakey /mnt/lustre-mds1/
      [root@devvm4 tests]# dmesg  | grep LU-16655
      [ 3325.250365] Lustre: 62237:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3344.469841] Lustre: 62344:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3379.617818] Lustre: 62529:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [root@devvm4 tests]# umount /mnt/lustre-mds1/
      [root@devvm4 tests]# mount -t lustre /dev/mapper/mds1_flakey /mnt/lustre-mds1/
      [root@devvm4 tests]# dmesg  | grep LU-16655
      [ 3325.250365] Lustre: 62237:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3344.469841] Lustre: 62344:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3379.617818] Lustre: 62529:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [ 3432.251449] Lustre: 62622:0:(scrub.c:189:scrub_file_load()) lustre-MDT0000: reset scrub OI count for format change (LU-16655)
      [root@devvm4 tests]# 
      

            zam Alexander Zarochentsev
            zam Alexander Zarochentsev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: